# diting

./: .gitignore  CHANGELOG.md  CLAUDE.md  DEVELOPMENT.md  LICENSE  Makefile  README.md  TESTING.md  aliases.example.yaml  aps.example.yaml  diting-companion.example.json  diting-familiarity.example.json  install.sh  pyproject.toml  scenes.example.yaml  wifiscope-20260507-232154.jsonl
.claude/commands/: tui-audit.md
.github/: pull_request_template.md
.github/workflows/: release.yml  test.yml
design/: audit.md
design/diting-design/: colors_and_type.css
docs/: RELEASE.md  _capture_preview.py  agents.md  workflow.md
docs/design/: audit.md
docs/explainers/: ble-identity.md  lan-inventory-arp.md  wifi-sensing.md
docs/specs/: v0.5.0-ble-tui.md  v0.6.0-ble-deep-identification.md  v0.7.0-network-ground-truth-and-environment-monitor.md
docs/zh/: CHANGELOG.md  DEVELOPMENT.md  HELPER.md  README.md  RELEASE.md  TESTING.md  agents.md  workflow.md
helper/: Info.plist  Package.swift  README.md  build.sh
openspec/: AGENTS.md  README.md
relay/: README.md  package-lock.json  package.json  vitest.config.js  wrangler.jsonc
relay/migrations/: 0001_init.sql  0002_presence.sql
relay/src/: apns.js  auth.js  index.js
relay/test/: relay.test.js
scripts/: ble_decoder_survey.py  build_app_icon.py  build_frozen.py  frozen_entry.py  package_release.sh  refresh_ouis.py  scrub_capture.py  tui_snapshot.py  update_vendors.py
src/diting/: __init__.py  __main__.py  _dynamic_store.py  _helper.py  _watchdog.py  analyze.py  backend.py  ble.py  capture.py  cli.py  environment.py  event_log.py  events.py  familiarity.py  i18n.py  insights.py  lan.py  lan_classify.py  lan_probes.py  latency.py  macos_backend.py  mdns.py  mdns_txt_decoders.py  models.py  network.py  permission.py  poller.py  salience.py  scene.py  scenes_config.py  sessions.py  splash.py  threats.py  tui.py  update.py
tests/: TESTING.md  conftest.py  test_analyze.py  test_analyze_baseline.py  test_ble.py  test_build_frozen.py  test_capture.py  test_cli.py  test_companion_cli.py  test_companion_protocol.py  test_companion_runtime.py  test_companion_sender.py  test_decoders.py  test_device_class.py  test_dynamic_store.py  test_environment.py  test_event_log.py  test_events.py  test_familiarity.py  test_helper.py  test_helper_associate.py  test_i18n.py  test_insights.py  test_install.py  test_lan.py  test_lan_probes.py  test_latency.py  test_macos_backend.py  test_mdns.py  test_mdns_txt_decoders.py  test_models.py  test_network.py  test_oui_multitier.py  test_poller.py  test_salience.py  test_scene.py  test_scenes_config.py  test_sessions.py  test_setup.py  test_splash.py  (+7 more)
(+649 files in other folders)
