[project]
name = "wifiscope"
version = "0.6.0"
description = "macOS terminal Wi-Fi monitor with roaming visibility, plus a BLE devices view with deep identification and connected-peripheral listing"
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
authors = [
    { name = "Chaoyi Chen" }
]
requires-python = ">=3.11"
dependencies = [
    "pyobjc-framework-corewlan>=12.1",
    "pyobjc-framework-systemconfiguration>=12.1",
    "pyyaml>=6.0.3",
    "textual>=8.2.5",
]

[project.scripts]
wifiscope = "wifiscope.cli:main"

[build-system]
requires = ["uv_build>=0.11.9,<0.12.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=9.0.3",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = ["-q", "--tb=short", "--strict-markers"]
