[project]
name = "diting"
version = "1.15.0"
description = "macOS terminal listening post for Wi-Fi, BLE, link health, and the RF environment — your Mac hears more than it tells you"
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
authors = [
    { name = "Chaoyi Chen" }
]
requires-python = ">=3.11"
dependencies = [
    "pynacl>=1.6.2",
    "pyobjc-framework-corewlan>=12.1",
    "pyobjc-framework-systemconfiguration>=12.1",
    "pyyaml>=6.0.3",
    "segno>=1.6.6",
    "textual>=8.2.5",
    "zeroconf>=0.130",
]

[project.scripts]
diting = "diting.cli:main"

[build-system]
requires = ["uv_build>=0.11.9,<0.12.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=9.0.3",
]
release = [
    "pyinstaller>=6.10",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = ["-q", "--tb=short", "--strict-markers"]
